# fastapi_practice

./: .gitignore  README.md  main.py  pyproject.toml
database/: db_models.py  db_postgres.py
exceptions/: __init__.py  http_error_mapper.py  user_error.py
repositories/: user_repo_postgres.py
routers/: users.py
schemas/: user.py
services/: user_service.py
tests/: conftest.py  test_api.py
unnecessary/: db_sqlite.py  models.py  services.py
